# fiap_tech_challenge_04

./: .gitignore  README.md  build.sh  notes.md  pyproject.toml
.devcontainer/: .env  1devcontainer.json  Dockerfile  devcontainer.jso_  docker-compose.yml  init-aws.sh
app/: Dockerfile  docker-compose.yml  entrypoint.sh
src/: .model.dump  api.py  aws_s3.py  dashboard.py  lambda_scrapper.py  main.py  pipeline.py  scrapper.py
